tests/sksl/errors/Ossfuzz49558.glsl
### Compilation failed:

error: 1: no type named 'lessThan'
lessThan
^^^^^^^^
1 error
